--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Crystal Saddler Photography" />
     <meta property="og:description" content="Located in the heart of Texas Hill Country, I specialize in capturing stunning commercial imagery. From real estate to professional portraits, my services cater to businesses and professionals seeking high-quality, impactful photographs." />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:image" content="https://www.crystalsaddlerphotography.com/og-image.jpg" />
     <meta property="og:url" content="https://www.crystalsaddlerphotography.com" />
     <meta property="og:type" content="website" />
 
